--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SW Photography</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome</h1>
+  <header id="cabecalho">
+    <a href="#" class="dark_mode">
+      <span class="material-icons">
+        dark_mode
+      </span>
+    </a>
+    <nav id="navegacao">
+      <ul class="ul_nav">
+        <li><a href="#trabalhos">Trabalhos</a></li>
+        <li><a href="#equipe">Equipe</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main id="apresentacao">
+    Apresentação
+  </main>
+  <section id="trabalhos">
+    ensaios
+  </section>
+  <section id="equipe">
+    equipe
+  </section>
+  <section id="contato">
+    contato
+  </section>
+  <footer id="rodape">
+    rodapé
+  </footer>
 </body>
 </html>
