--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     </nav>
   </header>
   <main id="apresentacao">
-    Apresentação
+    <h1 id="h1_boasvindas">Olá, mundo</h1>
+    <p>
+      Sejam bem-vindos ao nosso portfolio.</br>
+      Entre em contato conosco
+    </p>
   </main>
   <section id="trabalhos">
     ensaios
@@ -39,5 +43,7 @@
   <footer id="rodape">
     rodapé
   </footer>
+
+  <script src="/assets/js/index.js"></script>
 </body>
 </html>
