--- a/index.html
+++ b/index.html
@@ -28,11 +28,30 @@
     <h1 id="h1_boasvindas">Olá, mundo</h1>
     <p>
       Sejam bem-vindos ao nosso portfolio.</br>
-      Entre em contato conosco
+      Entre em contato conosco.
     </p>
   </main>
   <section id="trabalhos">
-    ensaios
+    <div class="container">
+      <div class="item">
+        <img src="/assets/imgs/presentationw.JPG" alt="">
+      </div>
+      <div class="item">
+        <img src="/assets/imgs/presentation.JPG" alt="">
+      </div>
+      <div class="item">
+        <img src="/assets/imgs/presentationw.JPG" alt="">
+      </div>
+      <div class="item">
+        <img src="/assets/imgs/presentationw.JPG" alt="">
+      </div>
+      <div class="item">
+        <img src="/assets/imgs/presentation.JPG" alt="">
+      </div>
+      <div class="item">
+        <img src="/assets/imgs/presentationw.JPG" alt="">
+      </div>
+    </div>
   </section>
   <section id="equipe">
     equipe
