--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
   rel="stylesheet">
 </head>
 <body>
-  <header id="cabecalho">
-    <a href="#" class="dark_mode">
+
+  <button id="btn-topo">
+    <a href="#">
       <span class="material-icons">
-        dark_mode
+        arrow_upward
       </span>
     </a>
+  </button>
+
+  <!-- ########## CABEÇALHO ########## -->
+  <header id="cabecalho">
+    <span class="material-icons">
+      photo_camera
+    </span>
     <nav id="navegacao">
       <ul class="ul_nav">
         <li><a href="#trabalhos">Trabalhos</a></li>
@@ -24,26 +32,31 @@
       </ul>
     </nav>
   </header>
+
+  <!-- ########## APRESENTAÇÃO ########## -->
   <main id="apresentacao">
+    <img src="/assets/icons/logo.png" class="logotipo">
     <h1 id="h1_boasvindas">Olá, mundo</h1>
     <p>
       Sejam bem-vindos ao nosso portfolio.</br>
       Entre em contato conosco.
     </p>
   </main>
+
+  <!-- ########## TRABALHOS ########## -->
   <section id="trabalhos">
-    <div class="container">
+    <div class="container_trabalhos">
       <div class="item">
-        <img src="/assets/imgs/presentationw.JPG" alt="">
+        <img src="/assets/imgs/um.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/presentation.JPG" alt="">
+        <img src="/assets/imgs/dois.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/presentationw.JPG" alt="">
+        <img src="/assets/imgs/tres.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/presentationw.JPG" alt="">
+        <img src="/assets/imgs/quatro.JPG" alt="">
       </div>
       <div class="item">
         <img src="/assets/imgs/presentation.JPG" alt="">
@@ -53,14 +66,61 @@
       </div>
     </div>
   </section>
+
+  <!-- ########## EQUIPE ########## -->
   <section id="equipe">
-    equipe
+    <div class="container">
+      <div class="item">
+        <img src="/assets/imgs/wendeson.jpg" class="img_equipe">
+        <h2>Wendeson Araújo</h2>
+        <ul class="ul_equipe">
+          <li>Fotográfo</li>
+          <li>Uma curiosidade aqui</li>
+          <li>Se quiser botar outra</li>
+        </ul>
+      </div>
+      <div class="item">
+        <img src="/assets/imgs/sabrina.jpg" class="img_equipe">
+        <h2>Sabrina Torres</h2>
+        <ul class="ul_equipe">
+          <li>Fotográfa</li>
+          <li>Uma curiosidade aqui</li>
+          <li>Se quiser botar outra</li>
+        </ul>
+      </div>
+    </div>
   </section>
   <section id="contato">
-    contato
+    <div class="container">
+      <div class="item">
+        <h2>Entre em contato conosco pelo email ou whatsapp</h2>
+        <ul class="ul_contato">
+          <li>
+            <span class="material-icons">
+              mail
+            </span>
+            <p>email@email.com</p>
+          </li>
+          <li>
+            <span class="material-icons">
+              call
+            </span>
+            <p>(84) 99033-3243</p>
+          </li>
+        </ul>
+      </div>
+      <div class="item">
+        <h2>Ou já faça seu orçamento</h2>
+        <button id="btn-orcamento">
+          <a href="https://forms.gle/3vyPHuXMqfV7gsqr9" target="_blank">Orçamento</a>
+        </button>
+      </div>
+    </div>
   </section>
   <footer id="rodape">
-    rodapé
+    <p>
+      Desenvolvido por <a href="https://axelrammon.github.io/">Axel Rammon</a>
+    </p>
   </footer>
 
   <script src="/assets/js/index.js"></script>
