--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
   <section id="trabalhos">
     <div class="container_trabalhos">
       <div class="item">
-        <img src="/assets/imgs/um.JPG" alt="">
+        <img src="./assets/imgs/um.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/dois.JPG" alt="">
+        <img src="./assets/imgs/dois.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/tres.JPG" alt="">
+        <img src="./assets/imgs/tres.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/quatro.JPG" alt="">
+        <img src="assets/imgs/quatro.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/presentation.JPG" alt="">
+        <img src="assets/imgs/presentation.JPG" alt="">
       </div>
       <div class="item">
-        <img src="/assets/imgs/presentationw.JPG" alt="">
+        <img src="./assets/imgs/presentationw.JPG" alt="">
       </div>
     </div>
   </section>
@@ -71,7 +71,7 @@
   <section id="equipe">
     <div class="container">
       <div class="item">
-        <img src="/assets/imgs/wendeson.jpg" class="img_equipe">
+        <img src="./assets/imgs/wendeson.jpg" class="img_equipe">
         <h2>Wendeson Araújo</h2>
         <ul class="ul_equipe">
           <li>Fotográfo</li>
@@ -80,7 +80,7 @@
         </ul>
       </div>
       <div class="item">
-        <img src="/assets/imgs/sabrina.jpg" class="img_equipe">
+        <img src="./assets/imgs/sabrina.jpg" class="img_equipe">
         <h2>Sabrina Torres</h2>
         <ul class="ul_equipe">
           <li>Fotográfa</li>
@@ -123,6 +123,6 @@
     </p>
   </footer>
 
-  <script src="/assets/js/index.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 </html>
