alterando caminho das imagens

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- ########## APRESENTAÇÃO ########## -->
   <main id="apresentacao">
-    <img src="/assets/icons/logo.png" class="logotipo">
+    <img src="./assets/icons/logo.png" class="logotipo">
     <h1 id="h1_boasvindas">Olá, mundo</h1>
     <p>
       Sejam bem-vindos ao nosso portfolio.</br>
@@ -56,10 +56,10 @@
         <img src="./assets/imgs/tres.JPG" alt="">
       </div>
       <div class="item">
-        <img src="assets/imgs/quatro.JPG" alt="">
+        <img src="./assets/imgs/quatro.JPG" alt="">
       </div>
       <div class="item">
-        <img src="assets/imgs/presentation.JPG" alt="">
+        <img src="./assets/imgs/presentation.JPG" alt="">
       </div>
       <div class="item">
         <img src="./assets/imgs/presentationw.JPG" alt="">
